[package]
name = "chompy"
version = "0.0.0"
edition = "2021"

[lib]
name = "chompy"
path = "src/lib.rs"

[dependencies]
codespan-reporting = "0.11"
colored = "2"
pretty_assertions = "1.1"
itertools = "0.10"
hashbrown = { version = "0.13", features = ["serde"] }
rand = "0.8"
lazy_static = "1.4"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
bitflags = "1.3"
tokio = { version = "1.17.0", features = ["full"] }
static_assertions = "1.1"
peekmore = "1"

[dev.dependencies]
pretty_assertions = "1.3"
