[package]
name = "chompy"
version = "0.1.2-alpha.0"
edition = "2021"
authors = ["Gabe Weiner <imlazyeye@gmail.com>"]
description = "A series of utilities used to create parsers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imlazyeye/chompy"
readme = "README.md"

[lib]
name = "chompy"
path = "src/lib.rs"

[dependencies]
codespan-reporting = "0.11"
pretty_assertions = "1.1"
hashbrown = { version = "0.13", features = ["serde"] }
static_assertions = "1.1"
peekmore = "1"
itertools = "0.12"
