[package]
name = "chompy"
version = "0.3.0"
edition = "2024"
authors = ["Gabe Weiner <imlazyeye@gmail.com>"]
description = "A series of utilities used to create parsers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imlazyeye/chompy"
readme = "README.md"

[lints]
    rust.missing_docs = "warn"
    clippy.dbg_macro = "warn"
    clippy.print_stdout = "warn"
    clippy.map_unwrap_or = "warn"
    clippy.similar_names = "warn"
    clippy.todo = "warn"
    clippy.unimplemented = "warn"
    clippy.undocumented_unsafe_blocks = "warn"
    clippy.module_inception = "allow"

[dependencies]
codespan-reporting = "0.13"
pretty_assertions = "1.1"
static_assertions = "1.1"
peekmore = "1.3"
